--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cryptpad"]
 	path = cryptpad
-	url = git@github.com:xwiki-labs/cryptpad.git
+	url = https://github.com/xwiki-labs/cryptpad.git
