Add migrationguide, config for traefik and compose
Signed-off-by: Adrian Nöthlich <git@promasu.tech>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,9 @@
 .dockerignore
 .git
 .gitignore
+.gitmodules
+cryptpad/.git
 customize
+data
 docker-compose.yml
 Dockerfile
-cryptpad/.git
-.gitmodules
