Revert config path in docker-compose.yml (leftover from tests)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ./customize:/cryptpad/customize
       - ./data/data:/cryptpad/data
       - ./data/files:/cryptpad/datastore
-      - ./config.js:/cryptpad/config/config.js
+      - ./data/config.js:/cryptpad/config/config.js
 
     ports:
       - "80:80"
