--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -33,8 +33,9 @@ RUN set -x \
 # Copy nginx conf from official image
 COPY --from=nginx:latest /etc/nginx /etc/nginx
 
-# Debian uses www-data user instead of nginx
-RUN sed -i 's@\(^user\).*[^;]@\1 www-data@' /etc/nginx/nginx.conf
+# Change nginx and disable server tokens
+RUN sed -i -e 's@\(^user\).*[^;]@\1 www-data@' \
+    -e "/default_type/a \\    server_tokens off;" /etc/nginx/nginx.conf
 
 # Copy cryptpad with installed modules
 COPY --from=build --chown=cryptpad /cryptpad /cryptpad
