--- a/interhop/docker-compose.yml
+++ b/interhop/docker-compose.yml
@@ -4,6 +4,7 @@ version: '3.8'
 services:
   cryptpad:
     image: interhop/cryptpad:${CRYPTPAD_VERSION}
+    restart: unless-stopped
     hostname: cryptpad
 
     env_file: .env
@@ -11,7 +12,7 @@ services:
     volumes:
       - ${DATA_PATH}/data/blob:/cryptpad/blob
       - ${DATA_PATH}/data/block:/cryptpad/block
-      - ${DATA_PATH}/customize:/cryptpad/customize
+      - ${DATA_PATH}/data/customize:/cryptpad/customize
       - ${DATA_PATH}/data/data:/cryptpad/data
       - ${DATA_PATH}/data/files:/cryptpad/datastore
       - ${DATA_PATH}/data/config.js:/cryptpad/config/config.js
